deps/v8/test/message/fail/map-arg-non-iterable.out
*%(basename)s:5: TypeError: 1 is not iterable
new Map(1);
^
TypeError: 1 is not iterable
    at new Map (<anonymous>)
    at *%(basename)s:5:1
